# nutritionist

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  MVP.md  README.md  compose.local.yml  compose.prod.yml  compose.yml  redis.conf  redis_nopersist.conf
axum-oidc/examples/basic/: scripts.sh
axum-oidc/examples/basic/src/: main.rs
keycloak_example/: compose.yml
keycloak_example/keycloak_data/: keycloakdb.mv.db  keycloakdb.trace.db
local-data/: appendonly.aof  dump.rdb
off-scripts/: compose.yml
src/: app.rs  db.rs  main.rs  models.rs  open_food_facts.rs
src/app/: forms.rs  handler.rs  meal_handler.rs  server.rs
src/db/: connector.rs
src/models/: meal.rs  models.rs  product.rs  user.rs
src/open_food_facts/: db_connection.rs  models.rs  product.rs  sdk.rs
src/usda/: search.rs
templates/: base.html
templates/meals/: meal-add-content.html  meal_view.html  meals_view.html
templates/product/: search_response.html  search_response_food.html
templates/test/: search.html
templates/user/: nutritionist_users.html
