[package]
name = "nutritionist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.12.2", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
redis = "0.25.2"
serde_json = "1.0.115"
uuid = { version = "1.8.0", features = ["v4","serde"] }
axum = "0.7.5"
tera = "1.19.1"
once_cell = "1.19.0"