[package]
name = "nutritionist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.12.2", features = ["json","rustls-tls"] }
tokio = { version = "1.37.0", features = ["full"] }
redis = "0.25.2"
serde_json = "1.0.115"
uuid = { version = "1.8.0", features = ["v4","serde"] }
axum = "0.7.5"
once_cell = "1.19.0"
chrono = { version = "0.4", features = ["serde"] }
axum-oidc = { path ="axum-oidc"}
dotenvy = "0.15.7"
tower = "0.4.13"

tower-sessions = "0.11.0"
askama = "0.12.1"
